--- a/auploader-api/appsettings.json
+++ b/auploader-api/appsettings.json
@@ -1,4 +1,25 @@
 ﻿{
+
+  /* S3 Settings */
+  "S3Settings": {
+    /* Example:
+    -----------------------------------------------------------------------------------------
+    "OriginalBucketName": "pluralsight-original",
+    "OriginalBucketUrl": "https://s3-ap-southeast-2.amazonaws.com/pluralsight-original/",
+    "AWSRegion": "ap-southeast-2",
+    "AWSAccessKey": "AKIAIANO4HFUOBGNGU7Q",
+    "AWSSecretKey": "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"
+    -----------------------------------------------------------------------------------------*/
+    "OriginalBucketName": "praba.bucket",
+    "OriginalBucketUrl": "https://s3-ap-southeast-2.amazonaws.com/praba.bucket/",
+    "AWSRegion": "ap-southeast-2",
+    "AWSAccessKey": "AKIAJAXHRPK5IGGDAMJA",
+    "AWSSecretKey": "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"
+  },
+  "FileUploadSettings": {
+    "MaxFileSize": "100_000_000_000",
+    "FileFormats": [] 
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
