--- a/auploader-api/auploader.api.csproj
+++ b/auploader-api/auploader.api.csproj
@@ -9,7 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.3.18.2" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.11.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
